# tantra

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: Dockerfile  entrypoint.sh
app/accounts/: apps.py  forms.py  urls.py  utils.py  views.py
app/appointments/: admin.py  models.py  serializer.py  urls.py  utils.py  views.py
app/appointments/migrations/: 0001_initial.py
app/articles/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
app/articles/migrations/: 0001_initial.py  0002_alter_announcement_body_and_more.py
app/config/: settings.py  urls.py
app/feedback/: admin.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py  widgets.py
app/feedback/migrations/: 0001_initial.py  0002_alter_review_user.py  0003_alter_review_user.py  0004_alter_review_unique_together.py
app/feedback/templatetags/: like.py  rating_tags.py
app/gallery/: admin.py  apps.py  forms.py  models.py  photo_processor.py  serializers.py  utils.py  validators.py  views.py
app/gallery/migrations/: 0001_initial.py
app/listings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/listings/migrations/: 0001_initial.py  0002_feature_icon.py  0003_alter_feature_options.py
app/main/: models.py  urls.py  utils.py  views.py
app/main/migrations/: 0001_initial.py  0002_delete_user.py
app/main/templatetags/: menu.py
app/specialists/: admin.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
app/specialists/fixtures/: basic_service_initial.json  massage_for_initial.json
app/specialists/migrations/: 0001_initial.py  0002_auto_20231230_1114.py  (+2 more)
app/users/: admin.py  apps.py  forms.py  managers.py  mixins.py  models.py  urls.py  utils.py  validators.py  views.py  wrappers.py
nginx/: nginx.conf
(+49 files in other folders)
