[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["zai <artziga77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
geopy = "^2.4.1"
django-formtools = "^2.5.1"
pillow = "^10.1.0"
django-autoslug = "^1.9.9"
django-imagekit = "^5.0.0"
django-multiupload = "^0.6.1"
django-cors-headers = "^4.3.1"
django-ckeditor = "^6.7.0"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.4.0"

[tool.poetry.group.dev.dependencies]
django-silk = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
